Structures files as per requirements

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
 <!-- 
- File Name: index.ejs
+ File Name: about.ejs
  Author: Mohammed Juned Ahmed
  Website Name:
  File Description:
@@ -15,18 +15,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-
-  <div class="content container">
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    
-    <ul>
-      <% for(let index=0; index<4; index++){ %>
-        <li>Item <%= index %> </li>
-      <% } %>
-    </ul>
-  </div>
-  
+    <div class="content container">
+      <h1><%= title %></h1>
+      <p>Welcome to <%= title %></p>
+    </div>
     <!-- JS Scripts -->
     <script src="/javascripts/jquery-3.1.1.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
