--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,10 @@
+<!-- 
+ File Name: error.ejs
+ Author: Mohammed Juned Ahmed
+ Website Name:
+ File Description:
+-->
+
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
