--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,6 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
-}
+/**
+ * File Name: style.css
+ * Author: Mohammed Juned Ahmed
+ * Website Name:
+ * File Description: This is custom Style Sheet.
+ */
