Created a live hosting on heroku

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 /**
  * File Name: style.css
  * Author: Mohammed Juned Ahmed
- * Website Name:
+ * Website Name: https://comp308assignment1.herokuapp.com/
  * File Description: This is custom Style Sheet.
  */
