--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,7 @@
 <!-- 
  File Name: error.ejs
  Author: Mohammed Juned Ahmed
- Website Name:
+ Website Name: https://comp308assignment1.herokuapp.com/
  File Description:
 -->
 
