--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,7 +2,7 @@
  File Name: error.ejs
  Author: Mohammed Juned Ahmed
  Website Name: https://comp308assignment1.herokuapp.com/
- File Description:
+ File Description: Contains the partials for error.
 -->
 
 <h1><%= message %></h1>
