--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,13 +1,15 @@
 <!-- 
  File Name: projects.ejs
  Author: Mohammed Juned Ahmed
- Website Name:
- File Description:
+ Website Name: https://comp308assignment1.herokuapp.com/
+ File Description: HTML page displaying all the projects information.
 -->
 
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
 
     <!-- CSS stylesheets -->
