--- a/views/services.ejs
+++ b/views/services.ejs
@@ -2,12 +2,14 @@
  File Name: services.ejs
  Author: Mohammed Juned Ahmed
  Website Name: https://comp308assignment1.herokuapp.com/
- File Description:
+ File Description: HTML page displaying all the services information.
 -->
 
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
 
     <!-- CSS stylesheets -->
