--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,14 +5,20 @@
  File Description: Contains the partials for header.
 -->
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
-    </head>
-    <body>
-        <h2>Header</h2>
-    </body>
-</html>
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="containter-fluid">
+    <div class="right">
+            <a class="navbar-brand" href="/">
+                Mohammed Juned Ahmed
+            </a>
+        </div>
+
+        <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/about">About Me</a></li>
+            <li><a href="/contact">Contact Me</a></li>
+        </ul>
+    </div>
+</nav>
