Fixed Header Errors

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,5 +10,5 @@
 <title><%= title %></title>
 
 <!-- CSS stylesheets -->
-<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-<link rel='stylesheet' href='/stylesheets/style.css' />
+<link rel="stylesheet" href="/Scripts/lib/bootstrap/dist/css/bootstrap.min.css">
+<link rel='stylesheet' href='/Content/style.css' />
