--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,7 @@
     <% include ./partials/head %>
   </head>
   <body>
-  <header>
-    <% include ./partials/header %>
-  </header>
+  <header><% include ./partials/header %></header>
 
   
   
