--- a/views/partials/jsscripts.ejs
+++ b/views/partials/jsscripts.ejs
@@ -6,5 +6,5 @@
 -->
 
 <!-- JS Scripts -->
-<script src="/javascripts/jquery-3.1.1.min.js"></script>
-<script src="/javascripts/bootstrap.min.js"></script>
+<script src="/Scipts/lib/jquery/dist/jquery.min.js"></script>
+<script src="/Scipts/lib/bootstrap/dist/js/bootstrap.min.js"></script>
