--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -11,6 +11,7 @@
     <% include ./partials/head %>
   </head>
   <body>
+  <header><% include ./partials/header %></header>
     <div class="content container">
       <h1><%= title %></h1>
       <p>Welcome to <%= title %></p>
