--- a/public/Content/style.css
+++ b/public/Content/style.css
@@ -9,3 +9,14 @@
     float: right;
     width: 175px;
 }
+
+.wrapper{
+    padding: 20px;
+    height: auto;
+}
+
+footer{
+    background-color: slategray;
+    display: table-row;
+    height: 1px;
+}
