--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,14 +5,6 @@
  File Description: Partials containing footer details.
 -->
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
-    </head>
-    <body>
-        <h2>Footer</h2>
-    </body>
-</html>
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+    <div class="container">@ Mohammed Juned Ahmed</div><!-- end Container-->
+</nav>
