--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,24 +5,26 @@
  File Description: Contains the partials for header.
 -->
 
-<nav class="navbar navbar-inverse navbar-fixed-top" id="myNavbar">
-    <div class="containter">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="/" class="navbar-brand">Mohammed Ahmed</a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/projects">Projects</a></li>
-                <li><a href="/services">Services</a></li>
-                <li><a href="/about">About Me</a></li>
-                <li><a href="/contact">Contact Me</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<header>
+  <nav class="navbar navbar-inverse navbar-fixed-top" id="myNavbar">
+      <div class="containter">
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <a href="/" class="navbar-brand">Mohammed Ahmed</a>
+          </div>
+          <div class="collapse navbar-collapse" id="navbar-collapse">
+              <ul class="nav navbar-nav">
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/projects">Projects</a></li>
+                  <li><a href="/services">Services</a></li>
+                  <li><a href="/about">About Me</a></li>
+                  <li><a href="/contact">Contact Me</a></li>
+              </ul>
+          </div>
+      </div><!--End containter-->
+  </nav><!--End Navbar-->
+</header>
