--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -11,11 +11,14 @@
     <% include ./partials/head %>
   </head>
   <body>
-  <header><% include ./partials/header %></header>
+    <header><% include ./partials/header %></header>
     <div class="content container">
       <h1><%= title %></h1>
       <p>Welcome to <%= title %></p>
     </div>
+    
+    <!-- FOOTER -->
+    <% include ./partials/footer %>
     <!-- JS Scripts -->
     <% include ./partials/jsscripts %>
   </body>
