--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,6 +5,6 @@
  File Description: Partials containing footer details.
 -->
 
-<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-    <div class="container">@ Mohammed Juned Ahmed</div><!-- end Container-->
+<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+    <div class="footer">@ Mohammed Juned Ahmed</div><!-- end Container-->
 </nav>
