--- a/views/partials/jumbotron.ejs
+++ b/views/partials/jumbotron.ejs
@@ -9,6 +9,6 @@
   <div class="container text-center">
     <h3>Mohammed Juned Ahmed</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime eveniet explicabo culpa maiores velit, ipsam cumque libero ipsum nobis accusantium.</p>
-    <div class="btn-group"><a href="" class="btn ntn-lg btn-info">Learn More</a></div>
+    <div class="btn-group"><a href="/about" class="btn ntn-lg btn-info">Learn More</a></div>
   </div><!--End container-->
 </div><!--End Jumbotron-->
