--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,5 +6,5 @@
 -->
 
 <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
-    <div class="footer">@ Mohammed Juned Ahmed</div><!-- end Container-->
+    <div class="footer">&copy; Mohammed Juned Ahmed</div><!-- end Container-->
 </nav>
