--- a/views/partials/jumbotron.ejs
+++ b/views/partials/jumbotron.ejs
@@ -8,7 +8,7 @@
 <div class="jumbotron">
   <div class="container text-center">
     <h3>Mohammed Juned Ahmed</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime eveniet explicabo culpa maiores velit, ipsam cumque libero ipsum nobis accusantium.</p>
+    <p>Digital identtity is my passion. A Web application developer and a recent graduate from centennial college.</p>
     <div class="btn-group"><a href="/about" class="btn ntn-lg btn-info">Learn More</a></div>
   </div><!--End container-->
 </div><!--End Jumbotron-->
