--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
 
 <header>
   <nav class="navbar navbar-inverse navbar-fixed-top" id="myNavbar">
-      <div class="containter">
+      <div class="container">
           <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
                   <span class="icon-bar"></span>
@@ -16,13 +16,14 @@
               </button>
               <a href="/" class="navbar-brand">Mohammed Ahmed</a>
           </div>
-          <div class="collapse navbar-collapse" id="navbar-collapse">
+          <div class="navbar-collapse collapse" id="navbar">
               <ul class="nav navbar-nav">
-                  <li><a href="/">Home</a></li>
+                  <li class="active"><a href="/">Home</a></li>
                   <li><a href="/projects">Projects</a></li>
                   <li><a href="/services">Services</a></li>
                   <li><a href="/about">About Me</a></li>
                   <li><a href="/contact">Contact Me</a></li>
+                  
               </ul>
           </div>
       </div><!--End containter-->
