--- a/views/services.ejs
+++ b/views/services.ejs
@@ -12,10 +12,39 @@
   </head>
   <body>
     <header><% include ./partials/header %></header>
-    <div class="content container">
-      <h1><%= title %></h1>
-      <p>Welcome to <%= title %></p>
+    
+    <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    <div class="container">
+  <section>
+    <div class="page-header" id="feedback">
+      <h2>Services</h2>
     </div>
+    
+    <div class="col-8 main-content">
+      
+      <h2>Web Designer & Developer</h2>
+      
+        <blockquote>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium provident eaque, aperiam blanditiis iste minus. Modi dolor rem necessitatibus, provident quas incidunt accusamus dicta, omnis officiis eveniet obcaecati in, optio voluptatem accusantium molestiae totam. Sed dolores quis officiis, eaque deleniti sequi soluta fugit excepturi eius sint, esse magnam, labore nam.</p>
+        </blockquote>
+
+        <h2>Database Adminstrator</h2>
+      
+        <blockquote>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam ratione quas minus voluptatem neque, perspiciatis dignissimos reprehenderit necessitatibus at sunt est non iusto accusamus architecto rerum! Dignissimos modi eum cum laudantium accusantium incidunt. Aliquam veritatis dicta accusantium aperiam recusandae. Harum nesciunt consectetur laboriosam! Cupiditate dignissimos harum repudiandae facere veniam praesentium.</p>
+        </blockquote>
+
+        <h2>Java Development</h2>
+      
+        <blockquote>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam ratione quas minus voluptatem neque, perspiciatis dignissimos reprehenderit necessitatibus at sunt est non iusto accusamus architecto rerum! Dignissimos modi eum cum laudantium accusantium incidunt. Aliquam veritatis dicta accusantium aperiam recusandae. Harum nesciunt consectetur laboriosam! Cupiditate dignissimos harum repudiandae facere veniam praesentium.</p>
+        </blockquote>
+
+    </div><!--End col-8 main-content-->
+  </section>
+</div><!--End container-->
+
+    <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
       
     <!-- FOOTER -->
     <% include ./partials/footer %>
