updated contact page

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -14,11 +14,23 @@
     <header><% include ./partials/header %></header>
     <div class="content container">
       <h1><%= title %></h1>
-      <p>Welcome to <%= title %></p>
     </div>
+    <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    <div class="container">
+      <address>
+        89 Ellesmere Avenue<br>
+        Toronto, ON<br>
+        CANADA<br>
+      </address>
+      <a href="mailto:ahmedmohammedjuned@gmail.com">Email Me!</a>
 
-      <!-- FOOTER -->
-      <% include ./partials/footer %>
+
+    </div>
+    
+
+    <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    <!-- FOOTER -->
+    <% include ./partials/footer %>
     <!-- JS Scripts -->
     <% include ./partials/jsscripts %>
   </body>
